# tailscale-manager

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOTCHAS.md  HEATMAP.md  Justfile  README.md  RELEASE.md  STRUCTURE.md  TESTS.md  UV2NIX.md  flake.nix  pyproject.toml
.github/: renovate.json
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  nix.yml  release.yml  security.yml  test-integration.yml  test-unit.yml  update-flake-lock.yml  weekly-deps.yml
docs/: API.md  CI.md  CONCEPTS.md  MULTI-MACHINE.md  OAUTH.md  POLICY.md
docs/policy/: README.md  acls.md  auto-approvers.md  autogroups.md  grants.md  groups.md  hosts.md  ipsets.md  network-options.md  node-attrs.md  postures.md  selectors.md  ssh.md  tag-owners.md  tests.md  users.md
examples/: README.md
examples/basic/: README.md  policy.json  policy.nix
examples/ssh-nixos/: README.md  policy.json  policy.nix
nix/: checks.nix  default.nix  devshell.nix  home-module.nix  module.nix  overlay.nix
src/tailscale_manager/: __init__.py  cli.py  tui.py
src/tailscale_manager/cli/: app.py  (+2 more)
src/textual_ui/: DOCS.md  __init__.py  app.py
tests/: conftest.py
tests/unit/: test_acl_backup.py  test_acl_feature.py  test_acl_model.py  test_app_connectors.nix  test_cli.py  test_cli_devices.py  test_config.py  test_device_model.py  test_devices_feature.py  test_dns_feature.py  test_keys_feature.py  test_settings_feature.py  test_settings_model.py  test_state_repository.py  test_subprocess_helpers.py  test_terraform_service.py  test_tui.py
(+53 files in other folders)
